--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,17 +1,9 @@
+{% extends "base.html" %}
 {% load static %}
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
-    <link rel="stylesheet" type="text/css" href='{%  static "css/main.css" %}'>
-    <title>Hello, world!</title>
-  </head>
+ 
+ {% block content %}
   <body>
     <div class="text-center">
       <h1>Hello Souvik Bro, This is the Home page</h1>
@@ -20,4 +12,5 @@
       <a href="http://127.0.0.1:8000/products/">Product</a>
     </div> 
   </body>
+  {% endblock %}
 </html>
